feat: add v2 mechanics actions
